# ts-json-repro

./: BUILD.bazel  MODULE.bazel  tsconfig.json
bar/: BUILD.bazel  bar.ts
foo/: BUILD.bazel  foo.ts
